<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30sp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/welcome_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/log_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="150dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextForLoginUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_user_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="30sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textInputEditTextForLoginPassword"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/don_t_have_an_account_register_now"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonForLogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#072539"
        android:background="@drawable/button_background"
        android:text="@string/login" />


</LinearLayout>