<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="30sp"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:text="@string/welcome_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:textSize="55sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40sp"
            android:background="@drawable/edit_text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEditTextForFirstName"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_background"
                android:hint="@string/first_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:background="@drawable/edit_text_background">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textViewEditTextForLastName"
                android:textColor="@color/white"
                android:background="@drawable/edit_text_background"
                android:hint="@string/last_name" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_person_24"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditTextForUserName"
            android:textColor="@color/white"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_user_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="30sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditTextForPassword"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:background="@drawable/edit_text_background"
        android:layout_marginTop="30sp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewEditTextForEmail"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text_background"
            android:hint="@string/enter_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:background="#707070"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="17sp"
            android:textColor="#605F5F"
            android:text="or" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#707070" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewForFacebook"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/facebook_logo" />

        <ImageView
            android:id="@+id/imageViewForGoogle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/google_logo" />

        <ImageView
            android:id="@+id/imageViewForTwitter"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/twitter_logo" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutToOpenLoginActivity"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:text="@string/don_t_have_an_account_register_now"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonForSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textColor="#072539"
        android:background="@drawable/button_background"
        android:text="@string/sing_up" />


</LinearLayout>